--- a/public/posts/android-infrastructure-setup.mdx
+++ b/public/posts/android-infrastructure-setup.mdx
@@ -127,7 +127,7 @@ adb shell am start -a android.intent.action.VIEW -d https://mobile.authsamples.c
 
 This will result in the following undesired behaviour, where the system browser attempts to open the URL, rather than the mobile app:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![deep link failure](../images/520/deep-link-failure.jpg?v=20240912)
 </div>
 
