--- a/public/posts/android-setup.mdx
+++ b/public/posts/android-setup.mdx
@@ -70,7 +70,7 @@ From Android Studio. navigate to *Device Manager*, then create an emulator if re
 
 Run the app using the emulator, which will result in this display:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![emulator app](../images/460/emulator-app.jpg?v=20240804)
 </div>
 
@@ -81,13 +81,13 @@ When prompted you can login with this blog’s cloud test credential:
 
 During login the system browser is invoked as a [Chrome Custom Tab](https://developer.chrome.com/multidevice/android/customtabs), which renders the AWS Cognito login screen:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![chrome custom tab](../images/460/chrome-custom-tab.jpg?v=20240804)
 </div>
 
 After login you will be returned to the app, which displays information about tokens. You can also send the access token to Cognito’s User Info endpoint, to get name details for the test user account:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![logged in](../images/460/logged-in.jpg?v=20240804)
 </div>
 
