--- a/public/posts/api-automated-tests.mdx
+++ b/public/posts/api-automated-tests.mdx
@@ -32,7 +32,7 @@ This post will describe the Node.js API’s test code, though the behaviour and 
 
 This test setup then becomes one of the API’s deployment scenarios, and is represented by the below environment file. Only the configuration is different for the API, and it runs the same code as in real environments:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![environment configurations](../images/380/environment-configurations.jpg)
 </div>
 
@@ -56,7 +56,7 @@ The primary configuration difference is that the API has been updated to use a J
 
 The final API integration tests consist of a number of code and script resources, to manage setup and execution. Each test will act as an API client and make HTTPS requests with a JWT access token:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![test layout](../images/380/test-layout.jpg)
 </div>
 
