--- a/public/posts/azure-active-directory-setup.mdx
+++ b/public/posts/azure-active-directory-setup.mdx
@@ -175,7 +175,7 @@ git clone https://github.com/gary-archer/oauth.websample.azure
 
 Identify the configuration files containing OAuth settings used by the UI and API:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![code layout](../images/190/code-layout.jpg)
 </div>
 
