--- a/public/posts/basicapi-codingkeypoints.mdx
+++ b/public/posts/basicapi-codingkeypoints.mdx
@@ -6,8 +6,8 @@ The previous post explained some <Link href='/posts/basicspa-codingkeypoints'>SP
 
 The API uses TypeScript code and the [Node.js Express](https://expressjs.com/) HTTP. The *logic* folder contains the API's functonality, which would be the area with business value in a real API. The API's plumbing code, including its OAuth handling, is separated from its logic:
 
-<div className="smallimage">
-![API code layout](../images/60/api-layout.jpg)
+<div className='smallimage'>
+    <img src='../images/60/api-layout.jpg' alt='API code layout' />
 </div>
 
 ### Dependencies
