--- a/public/posts/basicspa-codingkeypoints.mdx
+++ b/public/posts/basicspa-codingkeypoints.mdx
@@ -26,8 +26,8 @@ The SPA uses only a handful of external dependencies, expressed in its *package.
 
 I separate the SPA's concerns into a number of TypeScript classes, and in particular I keep plumbing separated from the application's important code. In a real SPA the views and view models represent your business value:
 
-<div className="smallimage">
-![SPA Code](../images/50/spa-code.jpg)
+<div className='smallimage'>
+    <img src='../images/50/spa-code.jpg' alt='SPA code' />
 </div>
 
 ### SPA Views
