--- a/public/posts/basicspa-execution.mdx
+++ b/public/posts/basicspa-execution.mdx
@@ -20,8 +20,8 @@ git clone https://github.com/gary-archer/oauth.websample1
 
 I use [Visual Studio Code](https://code.visualstudio.com/) but you can use any editor to view the code layout:
 
-<div className="smallimage">
-![Code layout](../images/30/code-layout.jpg)
+<div className='smallimage'>
+    <img src='../images/30/code-layout.jpg' alt='Code layout' />
 </div>
 
 The project demonstrates a code setup to aim for. Firstly, JavaScript code runs in the browser, where the goal is a great user experience. Secondly, API code serves data to frontends. Frontend code is business focused, with less plumbing than older website solutions.
