--- a/public/posts/cloud-hosting.mdx
+++ b/public/posts/cloud-hosting.mdx
@@ -81,8 +81,8 @@ Earlier in this blog we chose AWS Cognito as an initial low-cost authorization s
 
 Use of cloud hosting enables any reader of this blog to run this blog’s OAuth code samples. The <Link href='/posts/quick-start'>Code Samples Quick Start</Link> page provides details of online URLs and guest credentials for running the demo apps.
 
-<div className="smallimage">
-![cloud login](../images/580/cloud-login.jpg)
+<div className='smallimage'>
+    <img src='../images/580/cloud-login.jpg' alt='cloud login' />
 </div>
 
 ### Centralized API Logs
