--- a/public/posts/final-spa-overview.mdx
+++ b/public/posts/final-spa-overview.mdx
@@ -30,7 +30,7 @@ Any reader can run the AWS deployed version of the SPA from this blog’s <Link 
 
 The SPA code sample manages only frontend concerns. The resources in the *deployment* folder represent web static content hosting variations. The next post shows how to run the code sample locally.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![code layout](../images/220/code-layout.jpg)
 </div>
 
@@ -113,7 +113,7 @@ When the app loads, the React application reads the base path from the *index.ht
 
 Since the SPA is now cloud-deployed, you can access it on small mobile devices, so I made the final SPA more presentable on smaller screens:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![mobile view](../images/220/mobile-view.jpg?v=20240713)
 </div>
 
