--- a/public/posts/how-to-run-the-ios-code-sample.mdx
+++ b/public/posts/how-to-run-the-ios-code-sample.mdx
@@ -52,13 +52,13 @@ You can now run our demo app via the *Run* icon in the Xcode toolbar. You may th
 
 Next save the password when prompted, then navigate between views by clicking an item in the companies view or using the *Home* button:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![running app](../images/550/running-app.jpg?v=20240914)
 </div>
 
 Logins require associated domain registration to work on your simulator. If registration fails, you will receive the following display. The cause is that a mobile deep link is incorrectly processed in the browser. The next post, on iOS infrastructure, explains how you can resolve this problem, if it impacts you.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![not found login response](../images/550/not-found-login-response.jpg?v=20240914)
 </div>
 
@@ -137,13 +137,13 @@ The token data is then saved to the iOS keychain, which ensures that the data is
 
 It is worth performing certain tests while the ASWebAuthenticationSession window is active, to ensure that the app does not throw exceptions or recreate views unnecessarily:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![login](../images/550/login.jpg?v=20240914)
 </div>
 
 The first of these is to switch away from the app and then reactivate it from its shortcut. Verify that this does not cause any application problems:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![shortcut](../images/550/shortcut.jpg?v=20240914)
 </div>
 
@@ -167,7 +167,7 @@ xcrun simctl openurl booted https://mobile.authsamples.com/finalmobileapp/deepli
 
 We can use the *Expire Access Token* and *Reload Data* buttons to cause an invalid token to be sent to the API, resulting in a 401 response:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![access token expiry](../images/550/access-token-expiry.jpg?v=20240914)
 </div>
 
@@ -179,7 +179,7 @@ After every API call the UI checks for 401 responses, and handles them by gettin
 
 We can use *Expire Refresh Token* followed by *Reload Data* to simulate the end of a user session, which might occur if a user left the app running overnight:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![refresh token expiry](../images/550/refresh-token-expiry.jpg?v=20240914)
 </div>
 
@@ -197,7 +197,7 @@ AWS Cognito also uses a vendor specific logout solution and the logout request r
 
 When logout completes we are returned to the below post logout view within our app. In a real world app you could then test logging in as another user with different settings or permissions.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![new user login](../images/550/new-user-login.jpg?v=20240914)
 </div>
 
@@ -212,13 +212,13 @@ Our mobile app runs multiple views which could fail concurrently, so we implemen
 
 Our error display looks as follows after concurrent view failures. The user can click a hyperlink to see details, or press the *Home* button to retry:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![error summary](../images/550/error-summary.jpg?v=20240914)
 </div>
 
 The summary view uses an iOS modal sheet to display a view with error details, which would help to enable fast problem resolution:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![error details](../images/550/error-details.jpg?v=20240914)
 </div>
 
