--- a/public/posts/reactjs-codingkeypoints.mdx
+++ b/public/posts/reactjs-codingkeypoints.mdx
@@ -17,7 +17,7 @@ These earlier SPAs used access tokens in the browser, which is no longer recomme
 
 The final SPA is a React app that runs at a */spa* path. Additional paths, for other micro-frontends, could run within the same web domain, to keep the code base manageable as it grows:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![spa code](../images/240/spa-code.jpg)
 </div>
 
@@ -168,7 +168,7 @@ I deploy the demo SPA’s static content to the AWS content delivery network. Si
 
 The transactions mobile view therefore shows a single card per transaction in mobile resolutions:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![mobile transactions](../images/240/mobile-transactions.jpg?v=20240713)
 </div>
 
@@ -188,7 +188,7 @@ return  (
 
 At mobile dimensions the companies list now uses a card-based layout rather than a grid based layout:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![mobile companies](../images/240/mobile-companies.jpg?v=20240713)
 </div>
 
