--- a/public/posts/spring-boot-api-coding-model.mdx
+++ b/public/posts/spring-boot-api-coding-model.mdx
@@ -10,7 +10,7 @@ Our advanced Java API consists of three main areas:
 - API Business Logic
 - Common Code (plumbing)
 
-<div className="smallimage">
+<div className='smallimage'>
 ![code layout](../images/370/code-layout.jpg)
 </div>
 
@@ -20,7 +20,7 @@ In a real API platform, much of the plumbing folder could be extracted into one 
 
 Our API entry point is the below *FinalApiApplication* class:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![startup logic](../images/370/startup-logic.jpg)
 </div>
 
@@ -208,7 +208,7 @@ To solve this problem I created a [Spring Boot Custom Scope](https://www.baeldun
 
 API logging is also implemented via plumbing code, and the end goal is to enable <Link href='/posts/api-technical-support-analysis'>platform wide technical support queries by people</Link>.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![logging classes](../images/370/logging-classes.jpg)
 </div>
 
