--- a/public/posts/spring-boot-api-oauth-integration.mdx
+++ b/public/posts/spring-boot-api-oauth-integration.mdx
@@ -139,7 +139,7 @@ In this blog’s architecture, web specific concerns are not dealt with in APIs.
 
 A number of small classes are used to implement the desired behaviour from this blog’s <Link href='/posts/api-authorization-design'>API Authorization Design</Link>. The main work is to validate the JWT received in the HTTP request, then return a *ClaimsPrincipal* that is useful to the rest of the API’s code.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![oauth classes](../images/360/oauth-classes.jpg)
 </div>
 
