--- a/public/posts/android-coding-key-points.mdx
+++ b/public/posts/android-coding-key-points.mdx
@@ -6,16 +6,16 @@ Previously we described our <Link href='/posts/android-infrastructure-setup'>And
 
 One of this blog’s coding goals is to use the same UI classes across multiple platforms. Our Android app uses the same logical separation of responsibilities into classes as the earlier <Link href='/posts/reactjs-codingkeypoints'>React SPA</Link>:
 
-<div className="smallimage">
-![code layout](../images/530/code-layout.jpg)
+<div className='smallimage'>
+    <img src='../images/530/code-layout.jpg' alt='code layout' />
 </div>
 
 ### Unobtrusive OAuth Integration
 
 The view classes show below call our OAuth Secured API, and need to deal with *triggering login redirects* and *refreshing access tokens*. This can involve concurrency, which we will explore shortly.
 
-<div className="smallimage">
-![view classes](../images/530/view-classes.jpg)
+<div className='smallimage'>
+    <img src='../images/530/view-classes.jpg' alt='view classes' />
 </div>
 
 Companies will want to complete this tricky plumbing code once, then focus on business value, by growing the UI and API code.
@@ -301,8 +301,8 @@ interface Authenticator {
 
 Our app has two views that load concurrently and fire three concurrent API requests. The main view data is retrieved and there are also two additional API requests to get user info. OAuth user info is retrieved from the authorization server and additional user attributes are retrieved from the API.
 
-<div className="smallimage">
-![concurrent views](../images/530/concurrent-views.jpg?v=20240912)
+<div className='smallimage'>
+    <img src='../images/530/concurrent-views.jpg?v=20240912' alt='concurrent views' />
 </div>
 
 A *ViewModelCoordinator* object is used to wait for all views to load. In the event of any view receiving a permanent 401 response from the API, a single OAuth redirect is triggered by the main activity:
@@ -695,8 +695,8 @@ public static final class TokenRequestErrors {
 
 The app’s error handling is diligent about capturing these runtime details, to help with OAuth problem resolution:
 
-<div className="smallimage">
-![appauth error](../images/530/appauth-error.jpg?v=20240912)
+<div className='smallimage'>
+    <img src='../images/530/appauth-error.jpg?v=20240912' alt='appauth error' />
 </div>
 
 By coding in Kotlin, our Android sample requires fewest technical layers to integrate AppAuth libraries, and we have first-class access to error details.
