--- a/public/posts/basicandroidapp-execution.mdx
+++ b/public/posts/basicandroidapp-execution.mdx
@@ -38,7 +38,7 @@ You can now run our demo app via the Run Icon in the Android Studio toolbar. You
 
 Next save the password when prompted, then navigate between views by clicking an item in the companies view or using the *Home* button:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![running app](../images/510/running-app.jpg?v=20240912)
 </div>
 
@@ -189,7 +189,7 @@ The token data is then stored in *Android Shared Preferences*, and the operating
 
 It is worth performing certain tests while the Chrome custom tab window is active, to ensure that the app does not throw exceptions or recreate views unnecessarily. The first of these is to switch away from the app and then reactivate it from its shortcut:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![shortcut](../images/510/shortcut.jpg)
 </div>
 
@@ -244,7 +244,7 @@ This enables us to ignore any deep linking requests when our activity is not top
 
 We can use the *Expire Access Token* and *Reload Data* buttons to cause an invalid token to be sent to the API, resulting in a 401 response:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![access token expiry](../images/510/access-token-expiry.jpg?v=20240912)
 </div>
 
@@ -256,7 +256,7 @@ After every API call the UI checks for 401 responses, and handles them by gettin
 
 We can use *Expire Refresh Token* followed by *Reload Data* to simulate the end of a user session, which might occur if a user left the app running overnight:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![refresh token expiry](../images/510/refresh-token-expiry.jpg?v=20240912)
 </div>
 
@@ -293,7 +293,7 @@ AWS Cognito also uses a vendor specific logout solution and the logout request r
 
 When logout completes we are returned to the below post logout view within our app. In a real world app you could then test logging in as another user with different settings or permissions.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![new user login](../images/510/new-user-login.jpg?v=20240912)
 </div>
 
@@ -308,13 +308,13 @@ Our mobile app runs multiple views which could fail concurrently, so we implemen
 
 Our error display looks as follows after concurrent view failures. The user can click a hyperlink to see details, or press the Home button to retry:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![error summary](../images/510/error-summary.jpg?v=20240912)
 </div>
 
 The summary view uses an Android modal dialog to display a view with error details, which would help to enable fast problem resolution:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![error details](../images/510/error-details.jpg?v=20240912)
 </div>
 
