--- a/public/posts/how-to-run-the-react-js-spa.mdx
+++ b/public/posts/how-to-run-the-react-js-spa.mdx
@@ -37,7 +37,7 @@ The repository's code consists of the following main areas:
 | <span style={{color:'green'}}>**webhost**</span> | A web host for local computer setups, to serve web static content to the browser. |
 | <span style={{color:'green'}}>**deployment**</span> | Resources used to manage and automate web host deployments. |
 
-<div className="smallimage">
+<div className='smallimage'>
 ![code layout](../images/230/code-layout.jpg)
 </div>
 
