--- a/public/posts/improved-spa-code-sample-overview.mdx
+++ b/public/posts/improved-spa-code-sample-overview.mdx
@@ -41,7 +41,7 @@ git clone https://github.com/gary-archer/oauth.websample2
 
 The SPA uses the same components as the initial code sample, with SPA code that runs in the browser and an API backend.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![code layout](../images/170/code-layout.jpg)
 </div>
 
