--- a/public/posts/net-core-api-coding-model.mdx
+++ b/public/posts/net-core-api-coding-model.mdx
@@ -10,7 +10,7 @@ Our advanced C# API consists of three main areas:
 - API Business Logic
 - Common Code (plumbing)
 
-<div className="smallimage">
+<div className='smallimage'>
 ![code layout](../images/340/code-layout.jpg)
 </div>
 
@@ -130,7 +130,7 @@ public async Task<T> ReadDataAsync<T>(string filePath)
 
 API logging is also implemented via plumbing code, and the end goal is to enable <Link href='/posts/api-technical-support-analysis'>platform wide technical support queries by people</Link>.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![logging classes](../images/340/logging-classes.jpg)
 </div>
 
