--- a/public/posts/quick-start.mdx
+++ b/public/posts/quick-start.mdx
@@ -34,13 +34,13 @@ The app receives login responses on a redirect URI that uses a private-use URI s
 
 The Android App is a Single Activity App that uses Kotlin and Jetpack Compose. The [Android AppAuth Library](https://github.com/openid/AppAuth-Android) implements OpenID Connect and the app receives login responses on HTTPS redirect URIs, registered as Android app links.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![Android view](../images/3/android-view.jpg?v=20240912)
 </div>
 
 Logins run on a *Chrome Custom Tab*, with modern security and good usability. To run the app from Android Studio you can follow the <Link href='/posts/basicandroidapp-execution'>Android Code Sample Instructions</Link>.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![Android login](../images/3/android-login.jpg?v=20240912)
 </div>
 
@@ -48,13 +48,13 @@ Logins run on a *Chrome Custom Tab*, with modern security and good usability. To
 
 The [iOS AppAuth Library](https://github.com/openid/AppAuth-iOS) implements OpenID Connect and the app receives login responses on HTTPS redirect URIs, registered as iOS universal links.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![iOS view](../images/3/ios-view.jpg?v=20240713)
 </div>
 
 Logins run on Apple’s *ASWebAuthenticationSession* window. To run the app from Xcode you can follow the <Link href='/posts/how-to-run-the-ios-code-sample'>iOS Code Sample Instructions</Link>.
 
-<div className="smallimage">
+<div className='smallimage'>
 ![iOS login](../images/3/ios-login.jpg?v=20240713)
 </div>
 
