--- a/public/posts/serverless-api-overview.mdx
+++ b/public/posts/serverless-api-overview.mdx
@@ -36,7 +36,7 @@ git clone https://github.com/gary-archer/oauth.apisample.serverless
 
 We will take a closer look at the code in a couple of posts time, but for now, notice that the code structure matches that used in all of this blog’s earlier APIs, for <Link href='/posts/api-architecture-node'>Node.js</Link>, <Link href='/posts/net-core-code-sample-overview'>.NET</Link> and <Link href='/posts/java-spring-boot-api-overview'>Java</Link>:
 
-<div className="smallimage">
+<div className='smallimage'>
 ![code layout](../images/620/code-layout.jpg)
 </div>
 
